src/test/deca/context/invalid/Objet/BadExtends.deca
// Description:
//      Extends on a non declared class
//
// Results:
//      RUle (1.3) Super class does not exist
//
// History:
//      created on 17/1/2022

class A extends B {
    protected int x;
    int foo() {
        return 1;
    }
}

{
}